fix loader on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -383,14 +383,15 @@ body {
   z-index: 3;
   margin-bottom: 10px;
   border: 4px solid #566b78;
-  animation: loader 2s infinite cubic-bezier(.77,0,.175,1);
+  animation: loader 1.8s infinite cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .loader-inner {
   vertical-align: top;
+  height: 100%;
   width: 100%;
   background-color: #566b78;
-  animation: loader-inner 2s infinite cubic-bezier(.77,0,.175,1);
+  animation: loader-inner 4s infinite cubic-bezier(.77,0,.175,1);
 }
 
 .none {
@@ -403,32 +404,37 @@ body {
   }
 
   50% {
-    transform: rotate(360deg);
+    transform: rotate(180deg);
   }
 
   100% {
-    transform: rotate(900deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes loader-inner {
   0% {
-    height: 0%;
+    transform: scaleY(0);
+    transform-origin: top;
   }
 
   25% {
-    height: 0%;
+    transform: scaleY(1);
+    transform-origin: top;
   }
 
   50% {
-    height: 100%;
+    transform: scaleY(0);
+    transform-origin: top;
   }
 
   75% {
-    height: 100%;
+    transform: scaleY(1);
+    transform-origin: top;
   }
 
   100% {
-    height: 0%;
+    transform: scaleY(0);
+    transform-origin: top;
   }
 }
